--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Raspberry_Sensor)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Raspberry_Sensor main.cpp DHT.cpp DHT.hpp)
+add_executable(Raspberry_Sensor main.cpp DHT.cpp DHT.hpp
+		sensor.h)
